--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,30 @@
 appdirs==1.4.3
 aylien-apiclient==0.6.0
+beautifulsoup4==4.3.2
 click==6.7
+cssselect==0.9.1
+feedfinder2==0.0.1
+feedparser==5.1.3
 Flask==0.12.1
 httplib2==0.10.3
 itsdangerous==0.24
+jieba==0.35
 Jinja2==2.9.6
 logging==0.4.9.6
+lxml==3.3.5
 MarkupSafe==1.0
+newspaper==0.1.0.7
+nltk==2.0.5
 packaging==16.8
+Pillow==2.5.1
 pyparsing==2.2.0
-requests==2.13.0
+python-dateutil==2.4.0
+PyYAML==3.11
+requests==2.6.0
 six==1.10.0
-slackbot==0.4.1
+slackbot==0.5.1
 slackclient==1.0.5
-slacker==0.9.42
+slacker==0.9.50
+tldextract==1.5.1
 websocket-client==0.40.0
 Werkzeug==0.12.1
